--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controller\IController.cs" />
+    <Compile Include="SpriteFactory\SpriteFactory.cs" />
     <Compile Include="SpriteFactory\IFactory.cs" />
     <Compile Include="Sprite\ISprite.cs" />
   </ItemGroup>
