--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controller\IController.cs" />
     <Compile Include="SpriteFactory\IFactory.cs" />
+    <Compile Include="Sprite\Enemy Sprites\EnemySprite.cs" />
     <Compile Include="Sprite\ISprite.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,10 +112,7 @@
     </None>
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sprite\Enemy Sprites\" />
-    <Folder Include="Sprite\Player Sprite\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
