Implemented enemy interface

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -52,6 +52,7 @@
     <Compile Include="SpriteFactory\SpriteFactory.cs" />
     <Compile Include="SpriteFactory\IFactory.cs" />
     <Compile Include="Sprite\Enemy Sprites\EnemySprite.cs" />
+    <Compile Include="Sprite\Enemy Sprites\EnemyInterface.cs" />
     <Compile Include="Sprite\ISprite.cs" />
   </ItemGroup>
   <ItemGroup>
