--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -44,18 +44,19 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Command\ICommand.cs" />
+    <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controller\IController.cs" />
-    <Compile Include="SpriteFactory\SpriteFactory.cs" />
-    <Compile Include="SpriteFactory\IFactory.cs" />
-    <Compile Include="Sprite\Enemy Sprites\EnemySprite.cs" />
-    <Compile Include="Sprite\Enemy Sprites\EnemyInterface.cs" />
-    <Compile Include="Sprite\ISprite.cs" />
-    <Compile Include="Sprite\Player Sprites\PlayerSprite.cs" />
-    <Compile Include="Sprite\Player Sprites\PlayerInterface.cs" />
+    <Compile Include="Libraries\Controller\IController.cs" />
+    <Compile Include="Libraries\SpriteFactory\SpriteFactory.cs" />
+    <Compile Include="Libraries\SpriteFactory\IFactory.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\EnemySprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\EnemyInterface.cs" />
+    <Compile Include="Libraries\Sprite\ISprite.cs" />
+    <Compile Include="Libraries\Sprite\Player Sprites\PlayerSprite.cs" />
+    <Compile Include="Libraries\Sprite\Player Sprites\PlayerInterface.cs" />
+    <Compile Include="Libraries\Sprite\Projectiles\Interface1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -69,7 +70,7 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
+    <MonoGameContentReference Include="Libraries\Content\Content.mgcb" />
     <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
       <Link>x86\SDL2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
