Wrote WaveBeam and PowerBeam classes.

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Libraries\Sprite\Projectiles\WaveBeam.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\PowerBeam.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
