--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsClass.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsInterface.cs" />
+    <Compile Include="Libraries\Sprite\Projectiles\MissileRocketExplosion.cs" />
+    <Compile Include="Libraries\Sprite\Projectiles\MissileRocket.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\PowerBeam.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\WaveBeam.cs" />
     <Compile Include="Program.cs" />
