--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Libraries\Command\NextEnemy.cs" />
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Libraries\Controller\KeyboardController.cs" />
+    <Compile Include="Libraries\Controller\MouseController.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsClass.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsInterface.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\MissileRocketExplosion.cs" />
