--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
     <Compile Include="Libraries\Controller\MouseController.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\Kraid.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\Zeela.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\Skree.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\SideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\Ripper.cs" />
+    <Compile Include="Libraries\Sprite\Enemy Sprites\Memu.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsClass.cs" />
     <Compile Include="Libraries\Sprite\Items\ItemsInterface.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\MissileRocketExplosion.cs" />
