--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Libraries\Sprite\Enemy Sprites\IEnemy.cs" />
     <Compile Include="Libraries\Sprite\ISprite.cs" />
     <Compile Include="Libraries\Sprite\Player Sprites\PlayerSprite.cs" />
-    <Compile Include="Libraries\Sprite\Player Sprites\PlayerInterface.cs" />
+    <Compile Include="Libraries\Sprite\Player Sprites\IPlayer.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\IProjectile.cs" />
   </ItemGroup>
   <ItemGroup>
