--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -44,6 +44,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Libraries\Command\PlayerItemCommands\ShootMissileRocket.cs" />
     <Compile Include="Libraries\Command\PlayerItemCommands\ShootBeam.cs" />
     <Compile Include="Libraries\Command\PreviousEnemy.cs" />
     <Compile Include="Libraries\Command\NextEnemy.cs" />
