--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -66,8 +66,17 @@
     <Compile Include="Libraries\Sprite\Enemy Sprites\SideHopper.cs" />
     <Compile Include="Libraries\Sprite\Enemy Sprites\Ripper.cs" />
     <Compile Include="Libraries\Sprite\Enemy Sprites\Memu.cs" />
-    <Compile Include="Libraries\Sprite\Items\ItemsClass.cs" />
-    <Compile Include="Libraries\Sprite\Items\ItemsInterface.cs" />
+    <Compile Include="Libraries\Sprite\Items\Bomb.cs" />
+    <Compile Include="Libraries\Sprite\Items\EnergyTank.cs" />
+    <Compile Include="Libraries\Sprite\Items\HighJump.cs" />
+    <Compile Include="Libraries\Sprite\Items\IceBeam.cs" />
+    <Compile Include="Libraries\Sprite\Items\IItems.cs" />
+    <Compile Include="Libraries\Sprite\Items\LongBeam.cs" />
+    <Compile Include="Libraries\Sprite\Items\MissleRocket.cs" />
+    <Compile Include="Libraries\Sprite\Items\MorphBall.cs" />
+    <Compile Include="Libraries\Sprite\Items\ScrewAttack.cs" />
+    <Compile Include="Libraries\Sprite\Items\Varia.cs" />
+    <Compile Include="Libraries\Sprite\Items\WaveBeam.cs" />
     <Compile Include="Libraries\Sprite\Map\MapInterface.cs" />
     <Compile Include="Libraries\Sprite\Map\MapSprite.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\KraidHorn.cs" />
