--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -44,7 +44,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Libraries\Command\PlayerItemCommands\MissleOrBomb.cs" />
+    <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBomb.cs" />
     <Compile Include="Libraries\Command\UpgradeToggle.cs" />
     <Compile Include="Libraries\Command\Crouch.cs" />
     <Compile Include="Libraries\Command\Damage.cs" />
