--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -166,8 +166,8 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Code Reviews\WillQualityReviewDanny.txt" />
-    <Content Include="Code Reviews\WillReadabilityReviewDanny.txt" />
+    <Content Include="Code Reviews\Code Quality\WillQualityReviewDanny.txt" />
+    <Content Include="Code Reviews\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
