--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -166,8 +166,10 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Code Reviews\Code Quality\AlexQualityReviewWill.txt" />
     <Content Include="Code Reviews\Code Quality\NyigelQualityReviewShyamal.txt" />
     <Content Include="Code Reviews\Code Quality\WillQualityReviewDanny.txt" />
+    <Content Include="Code Reviews\Code Readability\AlexReadabilityReviewWill.txt" />
     <Content Include="Code Reviews\Code Readability\NyigelReadabilityReviewShyamal.txt" />
     <Content Include="Code Reviews\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
