--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -168,9 +168,11 @@
   <ItemGroup>
     <Content Include="Code Reviews\Code Quality\AlexQualityReviewWill.txt" />
     <Content Include="Code Reviews\Code Quality\NyigelQualityReviewShyamal.txt" />
+    <Content Include="Code Reviews\Code Quality\TristanQualityReviewAlex.txt" />
     <Content Include="Code Reviews\Code Quality\WillQualityReviewDanny.txt" />
     <Content Include="Code Reviews\Code Readability\AlexReadabilityReviewWill.txt" />
     <Content Include="Code Reviews\Code Readability\NyigelReadabilityReviewShyamal.txt" />
+    <Content Include="Code Reviews\Code Readability\TristanReadabilityReviewAlex.txt" />
     <Content Include="Code Reviews\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
