--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -167,14 +167,14 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Code Reviews\Code Quality\AlexQualityReviewWill.txt" />
-    <Content Include="Code Reviews\Code Quality\NyigelQualityReviewShyamal.txt" />
-    <Content Include="Code Reviews\Code Quality\TristanQualityReviewAlex.txt" />
-    <Content Include="Code Reviews\Code Quality\WillQualityReviewDanny.txt" />
-    <Content Include="Code Reviews\Code Readability\AlexReadabilityReviewWill.txt" />
-    <Content Include="Code Reviews\Code Readability\NyigelReadabilityReviewShyamal.txt" />
-    <Content Include="Code Reviews\Code Readability\TristanReadabilityReviewAlex.txt" />
-    <Content Include="Code Reviews\Code Readability\WillReadabilityReviewDanny.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Quality\AlexQualityReviewWill.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Quality\NyigelQualityReviewShyamal.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Quality\TristanQualityReviewAlex.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Quality\WillQualityReviewDanny.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Readability\AlexReadabilityReviewWill.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Readability\NyigelReadabilityReviewShyamal.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Readability\TristanReadabilityReviewAlex.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
