--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -173,10 +173,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code Reviews\Sprint2\Code Quality\AlexQualityReviewWill.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Quality\DannyQualityReviewNyigel.txt" />
     <Content Include="Code Reviews\Sprint2\Code Quality\NyigelQualityReviewShyamal.txt" />
     <Content Include="Code Reviews\Sprint2\Code Quality\TristanQualityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint2\Code Quality\WillQualityReviewDanny.txt" />
     <Content Include="Code Reviews\Sprint2\Code Readability\AlexReadabilityReviewWill.txt" />
+    <Content Include="Code Reviews\Sprint2\Code Readability\DannyReadabilityReviewNyigel.txt" />
     <Content Include="Code Reviews\Sprint2\Code Readability\NyigelReadabilityReviewShyamal.txt" />
     <Content Include="Code Reviews\Sprint2\Code Readability\TristanReadabilityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint2\Code Readability\WillReadabilityReviewDanny.txt" />
