--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -67,6 +67,12 @@
     <Compile Include="Libraries\Command\Start.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
     <Compile Include="Libraries\Controller\MouseController.cs" />
+    <Compile Include="Libraries\SFactory\BlockSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\MapSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\ItemSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\PlayerSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\ProjectilesSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\EnemySpriteFactory.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockInteface.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Enemy Sprites\Kraid.cs" />
