Refactored Geega and Kraid

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -77,14 +77,16 @@
     <Compile Include="Libraries\SFactory\EnemySpriteFactory.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockInteface.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Kraid.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\ReverseSideHopper.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\VerticalZeela.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Zeela.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Skree.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\SideHopper.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Ripper.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Memu.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Geega.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Kraid.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\ReverseSideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\KraidSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\VerticalZeela.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Zeela.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Skree.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\SideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Ripper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Memu.cs" />
     <Compile Include="Libraries\Sprite\IGameObject.cs" />
     <Compile Include="Libraries\Sprite\Items\BombItem.cs" />
     <Compile Include="Libraries\Sprite\Items\EnergyDropItem.cs" />
@@ -115,8 +117,8 @@
     <Compile Include="Libraries\Controller\IController.cs" />
     <Compile Include="Libraries\SFactory\SpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\IFactory.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\Geega.cs" />
-    <Compile Include="Libraries\Sprite\Enemy Sprites\IEnemy.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\GeegaSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\IEnemy.cs" />
     <Compile Include="Libraries\Sprite\ISprite.cs" />
     <Compile Include="Libraries\Sprite\Player Sprites\PlayerSprite.cs" />
     <Compile Include="Libraries\Sprite\Player Sprites\IPlayer.cs" />
