refactored the rest of the enemies

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -78,15 +78,22 @@
     <Compile Include="Libraries\Sprite\Blocks\BlockInteface.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Geega.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Ripper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\ReverseSideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Zeela.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\VerticalZeela.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Skree.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\SideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Game Objects\Memu.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Kraid.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\ReverseSideHopper.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\ReverseSideHopperSprite.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Sprites\KraidSprite.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\VerticalZeela.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\Zeela.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\Skree.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\SideHopper.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\Ripper.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\Memu.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\VerticalZeelaSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\ZeelaSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\SkreeSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\SideHopperSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\RipperSprite.cs" />
+    <Compile Include="Libraries\Sprite\Enemies\Sprites\MemuSprite.cs" />
     <Compile Include="Libraries\Sprite\IGameObject.cs" />
     <Compile Include="Libraries\Sprite\Items\BombItem.cs" />
     <Compile Include="Libraries\Sprite\Items\EnergyDropItem.cs" />
@@ -118,7 +125,6 @@
     <Compile Include="Libraries\SFactory\SpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\IFactory.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Sprites\GeegaSprite.cs" />
-    <Compile Include="Libraries\Sprite\Enemies\IEnemy.cs" />
     <Compile Include="Libraries\Sprite\ISprite.cs" />
     <Compile Include="Libraries\Sprite\Player Sprites\PlayerSprite.cs" />
     <Compile Include="Libraries\Sprite\Player Sprites\IPlayer.cs" />
