Added collisionDetector object with temporary code (Waiting on some refactoring to finish)

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -45,6 +45,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Libraries\Collision\CollisionDetector\CollisionDetector.cs" />
     <Compile Include="Libraries\Command\NextBlock.cs" />
     <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBomb.cs" />
     <Compile Include="Libraries\Command\PreviousBlock.cs" />
