--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -125,6 +125,9 @@
     <Compile Include="Libraries\Sprite\Projectiles\ProjectileSprites\PreBoomBombSprite.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\ProjectileSprites\WaveBeamSprite.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\WaveBeam.cs" />
+    <Compile Include="Libraries\States\IState.cs" />
+    <Compile Include="Libraries\States\PlayerStates\IPlayerState.cs" />
+    <Compile Include="Libraries\States\PlayerStates\PlayerState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Libraries\Controller\IController.cs" />
@@ -132,8 +135,8 @@
     <Compile Include="Libraries\SFactory\IFactory.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Sprites\GeegaSprite.cs" />
     <Compile Include="Libraries\Sprite\ISprite.cs" />
-    <Compile Include="Libraries\Sprite\Player Sprites\PlayerSprite.cs" />
-    <Compile Include="Libraries\Sprite\Player Sprites\IPlayer.cs" />
+    <Compile Include="Libraries\Sprite\Player\PlayerSprite.cs" />
+    <Compile Include="Libraries\Sprite\Player\IPlayer.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\IProjectile.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -208,7 +211,13 @@
     <Content Include="Code Reviews\Sprint2\Code Readability\TristanReadabilityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint2\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Code Reviews\Sprint3\" />
+    <Folder Include="Code Reviews\Sprint4\" />
+    <Folder Include="Code Reviews\Sprint5\" />
+    <Folder Include="Libraries\States\EnemyStates\" />
+    <Folder Include="Libraries\States\ObjectStates\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
