--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -45,7 +45,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Libraries\Collision\CollisionDetector\CollisionDetector.cs" />
+    <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
+    <Compile Include="Libraries\Collision\Collision Handler\CollisionHandler.cs" />
     <Compile Include="Libraries\Command\NextBlock.cs" />
     <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBomb.cs" />
     <Compile Include="Libraries\Command\PreviousBlock.cs" />
