Renamed all the commands to include "command"

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -47,26 +47,26 @@
   <ItemGroup>
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\CollisionHandler.cs" />
-    <Compile Include="Libraries\Command\NextBlock.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBomb.cs" />
-    <Compile Include="Libraries\Command\PreviousBlock.cs" />
-    <Compile Include="Libraries\Command\UpgradeToggle.cs" />
-    <Compile Include="Libraries\Command\Crouch.cs" />
-    <Compile Include="Libraries\Command\Damage.cs" />
-    <Compile Include="Libraries\Command\Jump.cs" />
-    <Compile Include="Libraries\Command\MoveLeft.cs" />
-    <Compile Include="Libraries\Command\MoveRight.cs" />
-    <Compile Include="Libraries\Command\NextItem.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\DropBomb.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\ShootMissileRocket.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\ShootBeam.cs" />
-    <Compile Include="Libraries\Command\PreviousEnemy.cs" />
-    <Compile Include="Libraries\Command\NextEnemy.cs" />
+    <Compile Include="Libraries\Command\NextBlockCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBombCommand.cs" />
+    <Compile Include="Libraries\Command\PreviousBlockCommand.cs" />
+    <Compile Include="Libraries\Command\UpgradeToggleCommand.cs" />
+    <Compile Include="Libraries\Command\CrouchCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerDamageCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerJumpCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerMoveLeftCommand.cs" />
+    <Compile Include="Libraries\Command\PlayeroveRightCommand.cs" />
+    <Compile Include="Libraries\Command\NextItemCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerItemCommands\DropBombCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerItemCommands\ShootMissileRocketCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerItemCommands\ShootBeamCommand.cs" />
+    <Compile Include="Libraries\Command\PreviousEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\NextEnemyCommand.cs" />
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Libraries\Command\PreviousItem.cs" />
-    <Compile Include="Libraries\Command\Select.cs" />
-    <Compile Include="Libraries\Command\Start.cs" />
+    <Compile Include="Libraries\Command\PreviousItemCommand.cs" />
+    <Compile Include="Libraries\Command\SelectCommand.cs" />
+    <Compile Include="Libraries\Command\StartCommand.cs" />
     <Compile Include="Libraries\Container\GameObjectContainer.cs" />
     <Compile Include="Libraries\Container\IContainer.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
@@ -148,7 +148,7 @@
     <Compile Include="Libraries\SFactory\IFactory.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Sprites\GeegaSprite.cs" />
     <Compile Include="Libraries\Sprite\ISprite.cs" />
-    <Compile Include="Libraries\Sprite\Player\PlayerSprite.cs" />
+    <Compile Include="Libraries\Sprite\Player\Player.cs" />
     <Compile Include="Libraries\Sprite\Player\IPlayer.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\IProjectile.cs" />
   </ItemGroup>
