--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -78,7 +78,9 @@
     <Compile Include="Libraries\SFactory\PlayerSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\ProjectilesSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\EnemySpriteFactory.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockInteface.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StockBlockBlueSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\StockBlockBlue.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\IBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Geega.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Ripper.cs" />
