--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -228,6 +228,7 @@
     <Folder Include="Code Reviews\Sprint3\" />
     <Folder Include="Code Reviews\Sprint4\" />
     <Folder Include="Code Reviews\Sprint5\" />
+    <Folder Include="Libraries\Camera\" />
     <Folder Include="Libraries\States\EnemyStates\" />
     <Folder Include="Libraries\States\ObjectStates\" />
   </ItemGroup>
