Refactored the player input commands to fit the command design pattern.

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -47,24 +47,23 @@
   <ItemGroup>
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\CollisionHandler.cs" />
-    <Compile Include="Libraries\Command\NextBlockCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\MissileOrBombCommand.cs" />
-    <Compile Include="Libraries\Command\PreviousBlockCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerAimUpCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextBlockCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\CycleBeamMissileCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerAttackCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousBlockCommand.cs" />
     <Compile Include="Libraries\Command\UpgradeToggleCommand.cs" />
-    <Compile Include="Libraries\Command\CrouchCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerCurlUpCommand.cs" />
     <Compile Include="Libraries\Command\PlayerDamageCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerJumpCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerMoveLeftCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerMoveRightCommand.cs" />
-    <Compile Include="Libraries\Command\NextItemCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\DropBombCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\ShootMissileRocketCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerItemCommands\ShootBeamCommand.cs" />
-    <Compile Include="Libraries\Command\PreviousEnemyCommand.cs" />
-    <Compile Include="Libraries\Command\NextEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerJumpCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerMoveLeftCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\PlayerMoveRightCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextItemCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextEnemyCommand.cs" />
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Libraries\Command\PreviousItemCommand.cs" />
+    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousItemCommand.cs" />
     <Compile Include="Libraries\Command\SelectCommand.cs" />
     <Compile Include="Libraries\Command\StartCommand.cs" />
     <Compile Include="Libraries\Container\GameObjectContainer.cs" />
