--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -88,20 +88,40 @@
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueMetalBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BluePipesBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueSquareBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BushBlockBlueSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BushBlockSilverSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\DualHorizontalBlockStoneSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenBrickBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenFenceBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenPipeBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenSquareBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LavaBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LavaBlockTopSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LeftStartingPlatformBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LightBlueBrickBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\OrangeDoorBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedCircleBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedCrackedBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorBottomLeftBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorBottomRightBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleLeftBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleRightBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorTopLeftBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorTopRightBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedPipeLeftSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedPipeRightSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RightStartingPlatformBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RoofSpikeBlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StockBlockBlueSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StockBlockStoneSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StoneBlockWithEyesSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\SwirlBlockBlueSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\TubeBlockBlueSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\VerticalTubeStoneBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BushBlockBlue.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BushBlockSilver.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\DualHorizontalBlockStone.cs" />
     <Compile Include="Libraries\Sprite\Blocks\IBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlockSprite.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlueCircleBlock.cs" />
@@ -121,15 +141,29 @@
     <Compile Include="Libraries\Sprite\Blocks\GreenSquareBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\LavaBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\LavaBlockTop.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\LeftStartingPlatformBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\LightBlueBrickBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\OrangeDoorBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\RedCircleBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\RedCrackedBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorBottomLeftBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorBottomRightBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorMiddleBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorMiddleLeftBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorMiddleRightBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorTopLeftBlock.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RedDoorTopRightBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\RedPipeLeft.cs" />
     <Compile Include="Libraries\Sprite\Blocks\RedPipeRight.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\RightStartingPlatformBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\RoofSpikeBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BlueBrickBlock.cs" />
     <Compile Include="Libraries\Sprite\Blocks\StockBlockBlue.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\StockBlockStone.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\StoneBlockWithEyes.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\SwirlBlockBlue.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\TubeBlockBlue.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\VerticalTubeStoneBlock.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Geega.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\IEnemy.cs" />
     <Compile Include="Libraries\Sprite\Enemies\Game Objects\Ripper.cs" />
