--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -47,23 +47,25 @@
   <ItemGroup>
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\CollisionHandler.cs" />
+    <Compile Include="Libraries\Command\ProjectileDamageEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\ProjectileDamagePlayerCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerAimUpCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextBlockCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\NextBlockCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\CycleBeamMissileCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerAttackCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousBlockCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\PreviousBlockCommand.cs" />
     <Compile Include="Libraries\Command\UpgradeToggleCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerCurlUpCommand.cs" />
     <Compile Include="Libraries\Command\EnemyDamagePlayerCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerJumpCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerMoveLeftCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerMoveRightCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextItemCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousEnemyCommand.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\NextEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\NextItemCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\PreviousEnemyCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\NextEnemyCommand.cs" />
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Libraries\Command\PlayerInputCommands\UnusedCommands\PreviousItemCommand.cs" />
+    <Compile Include="Libraries\Command\UnusedCommands\PreviousItemCommand.cs" />
     <Compile Include="Libraries\Command\SelectCommand.cs" />
     <Compile Include="Libraries\Command\StartCommand.cs" />
     <Compile Include="Libraries\Container\GameObjectContainer.cs" />
