--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -300,6 +300,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
+    <None Include="Libraries\Levels\StartingLevel.csv" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code Reviews\Sprint2\Code Quality\AlexQualityReviewWill.txt" />
